redact-pdf/redact-pdf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redact-pdf-service
  namespace: anonymus
spec:
  selector:
    app: redact-pdf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
