redact-pdf/redact-pdf/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redact-pdf-ingress
  namespace: anonymus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: nginx.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /redact-pdf
        pathType: Prefix
        backend:
          service:
            name: redact-pdf-service
            port:
              number: 80
